force-app/main/default/objects/COMM_OMS_HttpLog__c/COMM_OMS_HttpLog__c.object-meta.xml
<CustomObject>
    <label>OMS Http Log</label>
    <nameField>
        <displayFormat>Http Log - {0}</displayFormat>
        <label>OMS_HttpLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OMS Http Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>