force-app/main/default/objects/COMM_OMS_HttpLog__c/fields/RequestBody__c.field-meta.xml
<CustomField>
    <fullName>RequestBody__c</fullName>
    <label>RequestBody</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>