force-app/main/default/objects/COMM_OMS_HttpLog__c/fields/RequestHeader__c.field-meta.xml
<CustomField>
    <fullName>RequestHeader__c</fullName>
    <label>RequestHeader</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>