force-app/main/default/objects/COMM_OMS_HttpLog__c/fields/ResponseBody__c.field-meta.xml
<CustomField>
    <fullName>ResponseBody__c</fullName>
    <label>ResponseBody</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>