force-app/main/default/objects/COMM_OMS_HttpLog__c/fields/ResponseHeader__c.field-meta.xml
<CustomField>
    <fullName>ResponseHeader__c</fullName>
    <label>ResponseHeader</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>