force-app/main/default/objects/COMM_OMS_HttpLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Method__c</columns>
    <columns>Endpoint__c</columns>
    <columns>StatusCode__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RequestBody__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>